src/test/deca/syntax/invalid/a_revoir.deca
// Description:
//    erreur syntaxique
//
// Resultats:
//    erreur syntaxique
//
// Historique:
//    cree le 08/01/2023

{
    int x;
    x!2;
}
